# netatmo

./: CMakeLists.txt  package.xml
src/: CMakeLists.txt
src/weatherStation/: CMakeLists.txt  weatherStation.cpp
src/weatherStation/php/script/: Config.php  weatherStationGetData.php
src/welcome/: CMakeLists.txt
